# sqlpp11-connector-postgresql

./: .appveyor.yml  .clang-format  .gitignore  .gitignore.orig  .gitmodules  .travis.yml  CMakeLists.txt  CMakeLists.txt.orig  CREDITS  LICENSE  README.md  SConstruct  appveyor.yml
CMake/: FindSqlpp11_BASE_2847.cmake  FindSqlpp11_LOCAL_2847.cmake
cmake/: Sqlpp-connector-postgresqlConfig.cmake  Sqlpp-postgresqlConfig.cmake
include/sqlpp11/data_types/: uuid.h
include/sqlpp11/data_types/uuid/: column_operators.h  data_type.h  expression_operators.h  operand.h  parameter_value.h  result_field.h  wrap_operand.h
include/sqlpp11/postgresql/: bind_result.h  bind_result.h.orig  connection.h  connection.h.orig  connection_config.h  connection_config.h.BACKUP.16192.h  connection_config.h.REMOTE.16192.h  connection_config.h.orig  do_nothing.h  exception.h  insert.h  insert.h.orig  interpreter.h  on_conflict.h  on_conflict_do_nothing.h  on_conflict_do_update.h  pgexception.h  postgresql.h  prepared_statement.h  prepared_statement.h.orig  result.h  returning.h  returning_column_list.h  returning_column_list.h.orig  serializer.h  update.h  visibility.h
scripts/: ddl2cpp.py
src/: CMakeLists.txt  SConscript  bind_result.cpp  bind_result.cpp.orig  connection.cpp  connection.cpp.orig  exception.cpp  prepared_statement.cpp  result.cpp
src/cmake/: sqlpp11postgresqlConfig.cmake
src/detail/: SConscript  connection_handle.cpp  connection_handle.cpp.orig  connection_handle.h  connection_handle.h.orig  dynamic_libpq.cpp  make_unique.h  prepared_statement_handle.cpp  prepared_statement_handle.h  prepared_statement_handle.h.orig
src/sqlpp11/postgresql/: bind_result.cpp  bind_result.h  connection.cpp  connection.h  dynamic_libpq.cpp  prepared_statement.cpp  prepared_statement.h  prepared_statement_handle.h  result.cpp  visibility.h
tests/: BasicTest.cpp  CMakeLists.txt  ConstructorTest.cpp  DateTest.cpp  DateTime.cpp  Exceptions.cpp  InsertOnConflict.cpp  Returning.cpp  Select.cpp  SelectTest.cpp  TabBar.h  TabFoo.h  TransactionTest.cpp  TypeTest.cpp  assertThrow.hpp
tests/static_fail/: OnConflictEmptyWhereDoUpdate.cpp  OnConflictInvalidAssignmentsDoUpdate.cpp  OnConflictInvalidParameter.cpp  OnConflictInvalidWhereDoUpdate.cpp  OnConflictMissingAction.cpp  OnConflictMissingAssignmentsDoUpdate.cpp  OnConflictMissingParameterDoUpdate.cpp  ReturningEmptyAssert.cpp  ReturningInvalidArgument.cpp
